--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryState/StandaloneMemoryViewerControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryState/StandaloneMemoryViewerControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.MemoryViewerFlyout"
+    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.MemoryState.StandaloneMemoryViewerControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
