Added codes library loading animation, code refactoring

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
@@ -35,8 +35,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <dataTemplates:SavedSourceCodeTemplate 
-                                SourceCode="{Binding Code}"
-                                CodeType="{Binding Type}"
+                                CodeInfo="{Binding}"
                                 FavoriteToggleRequested="SavedSourceCodeTemplate_OnFavoriteToggleRequested"
                                 RenameRequested="SavedSourceCodeTemplate_OnRenameRequested"
                                 ShareRequested="SavedSourceCodeTemplate_OnShareRequested"
