Added ability to export a saved code as a C source file

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
@@ -39,7 +39,8 @@
                                 FavoriteToggleRequested="SavedSourceCodeTemplate_OnFavoriteToggleRequested"
                                 RenameRequested="SavedSourceCodeTemplate_OnRenameRequested"
                                 ShareRequested="SavedSourceCodeTemplate_OnShareRequested"
-                                DeleteRequested="SavedSourceCodeTemplate_OnDeleteRequested"/>
+                                DeleteRequested="SavedSourceCodeTemplate_OnDeleteRequested"
+                                TranslateToCRequested="SavedSourceCodeTemplate_OnTranslateToCRequested"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                     <ListView.GroupStyle>
