--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UnicodeCharactersGuideFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UnicodeCharactersGuideFlyout.xaml
@@ -65,6 +65,9 @@
                 <ListView.Header>
                     <Grid Height="20"/>
                 </ListView.Header>
+                <ListView.Footer>
+                    <Grid Height="4"/>
+                </ListView.Footer>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <dataTemplates:UnicodeCharacterTemplate Margin="0,0,16,8"/>
