--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualKeyboardControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualKeyboardControl.xaml
@@ -35,13 +35,13 @@
             Click="BackButton_Tapped"/>
         <controls:KeyboardButton
             Text="+"
-            Description="*ptr++"
+            Description="(*ptr)++"
             Grid.Row="0"
             Grid.Column="2"
             Click="PlusButton_Tapped"/>
         <controls:KeyboardButton
             Text="-"
-            Description="*ptr--"
+            Description="(*ptr)--"
             Grid.Row="0"
             Grid.Column="3"
             Click="MinusButton_Tapped"/>
