Minor optimizations to the flyout container

--- a/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
@@ -136,6 +136,7 @@
             Grid.Row="1"
             Grid.RowSpan="2"
             x:Name="LoadingBorder"
+            Visibility="Collapsed"
             IsHitTestVisible="False"
             Canvas.ZIndex="10"
             Margin="1,0,1,1"/>
