Fixed memory leak with the InAppAcrylicGrid control

--- a/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/MenuFlyoutStyles.xaml
@@ -32,7 +32,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="MenuFlyoutPresenter">
                     <Grid>
-                        <inheritedControls:InAppAcrylicGrid/>
+                        <inheritedControls:InAppAcrylicGrid DisposeOnUnload="True"/>
                         <Grid Background="{TemplateBinding Background}"
                               x:Name="ContentGrid">
                             <ScrollViewer x:Name="MenuFlyoutPresenterScrollViewer"
