Minor UI tweaks and adjustments

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryState/StandaloneMemoryViewerControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryState/StandaloneMemoryViewerControl.xaml
@@ -13,6 +13,7 @@
     <!--Memory cells list-->
     <ListView ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}"
               x:Name="MemoryList"
+              IsHitTestVisible="False"
               CanDrag="False">
         <ListView.Header>
             <Grid Height="12"/>
