--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
@@ -211,7 +211,7 @@
                     Background="{ThemeResource SystemControlHighlightAccentBrush}"
                     MaxWidth="220"
                     HorizontalAlignment="Left"
-                    Click="SendEmailButton_Click">
+                    Click="ShowChangelogButton_Click">
                     <Grid Margin="12,0,12,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
@@ -225,8 +225,8 @@
                             Grid.Column="1"
                             VerticalAlignment="Center"
                             Margin="16,0,0,0"
-                            Text="Send feedback"
-                            x:Uid="SendFeedbackBlock"
+                            Text="Changelog"
+                            x:Uid="ChangelogBlock"
                             IsTextScaleFactorEnabled="False"
                             TextWrapping="NoWrap"
                             TextTrimming="CharacterEllipsis"
