--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
@@ -7,6 +7,7 @@
     xmlns:attachedProperties="using:Brainf_ck_sharp_UWP.AttachedProperties"
     xmlns:jumpList="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList"
     xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
+    xmlns:changelog="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList.Changelog"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -48,7 +49,7 @@
                         <GroupStyle HeaderContainerStyle="{StaticResource GroupsViewListHeaderStyle}">
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate>
-                                    <jumpList:ChangelogZoomedInHeaderTemplate
+                                    <changelog:ChangelogZoomedInHeaderTemplate
                                         Margin="12,8,16,4"/>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
