--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/DevInfoFlyout.xaml
@@ -85,7 +85,7 @@
             
             <!--Donate button-->
             <Button 
-                Margin="20,0,0,0"
+                Margin="16,0,0,0"
                 HorizontalAlignment="Left"
                 MaxWidth="220"
                 Height="40"
@@ -121,74 +121,82 @@
         <Grid 
             Background="#20000000"
             Margin="0,12,0,0">
-            <StackPanel Margin="12,12,0,0">
+            <StackPanel Margin="12,12,16,12">
                 <TextBlock
                     Text="Contacts"
                     x:Uid="ContactsBlock"
                     FontSize="16"
                     FontWeight="Normal"/>
 
-                <!--Email button-->
-                <Button
+                <!--Email and Twitter buttons-->
+                <Grid 
                     Margin="0,16,0,0"
-                    Height="40"
-                    Style="{StaticResource WideButtonWithNoBackgroundAndPointerBrushStyle}"
-                    Background="{ThemeResource SystemControlHighlightAccentBrush}"
-                    MaxWidth="220"
-                    HorizontalAlignment="Left"
-                    Click="SendEmailButton_Click">
-                    <Grid Margin="12,0,12,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock
-                            Text="&#xE166;"
-                            Style="{StaticResource FontIconTextBlockStyle}"
-                            VerticalAlignment="Center"/>
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            Margin="16,0,0,0"
-                            Text="Send feedback"
-                            x:Uid="SendFeedbackBlock"
-                            IsTextScaleFactorEnabled="False"
-                            TextWrapping="NoWrap"
-                            TextTrimming="CharacterEllipsis"
-                            FontSize="15"
-                            FontWeight="Normal"/>
-                    </Grid>
-                </Button>
+                    Height="40">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                <!--Twitter button-->
-                <Button
-                    Margin="0,16,0,16"
-                    Height="40"
-                    Style="{StaticResource WideButtonWithNoBackgroundAndPointerBrushStyle}"
-                    Background="#FF1DA1F2"
-                    MaxWidth="220"
-                    HorizontalAlignment="Left"
-                    Click="TwitterButton_Click">
-                    <Grid Margin="12,0,12,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Image
-                            Source="/Assets/Misc/Twitter.png"
-                            Height="20"/>
-                        <TextBlock
-                            Grid.Column="1"
-                            VerticalAlignment="Center"
-                            IsTextScaleFactorEnabled="False"
-                            TextWrapping="NoWrap"
-                            TextTrimming="CharacterEllipsis"
-                            Margin="16,0,0,0"
-                            Text="@SergioPedri"
-                            FontSize="15"
-                            FontWeight="Normal"/>
-                    </Grid>
-                </Button>
+                    <!--Email button-->
+                    <Button
+                        Style="{StaticResource WideButtonWithNoBackgroundAndPointerBrushStyle}"
+                        Background="{ThemeResource SystemControlHighlightAccentBrush}"
+                        MaxWidth="220"
+                        HorizontalAlignment="Left"
+                        Click="SendEmailButton_Click">
+                        <Grid Margin="12,0,12,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock
+                                Text="&#xE166;"
+                                Style="{StaticResource FontIconTextBlockStyle}"
+                                VerticalAlignment="Center"/>
+                            <TextBlock
+                                Grid.Column="1"
+                                VerticalAlignment="Center"
+                                Margin="16,0,0,0"
+                                Text="Send feedback"
+                                x:Uid="SendFeedbackBlock"
+                                IsTextScaleFactorEnabled="False"
+                                TextWrapping="NoWrap"
+                                TextTrimming="CharacterEllipsis"
+                                FontSize="15"
+                                FontWeight="Normal"/>
+                        </Grid>
+                    </Button>
+
+                    <!--Twitter button-->
+                    <Button
+                        Margin="16,0,0,0"
+                        Grid.Column="1"
+                        Style="{StaticResource WideButtonWithNoBackgroundAndPointerBrushStyle}"
+                        Background="#FF1DA1F2"
+                        MaxWidth="220"
+                        HorizontalAlignment="Left"
+                        Click="TwitterButton_Click">
+                        <Grid Margin="12,0,12,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Source="/Assets/Misc/Twitter.png"
+                                Height="20"/>
+                            <TextBlock
+                                Grid.Column="1"
+                                VerticalAlignment="Center"
+                                IsTextScaleFactorEnabled="False"
+                                TextWrapping="NoWrap"
+                                TextTrimming="CharacterEllipsis"
+                                Margin="16,0,0,0"
+                                Text="@SergioPedri"
+                                FontSize="15"
+                                FontWeight="Normal"/>
+                        </Grid>
+                    </Button>
+                </Grid>
             </StackPanel>
         </Grid>
 
@@ -243,7 +251,6 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock TextWrapping="Wrap"
-                               FontWeight="SemiLight"
                                Text="&#xE98F;"
                                FontFamily="Segoe MDL2 Assets"
                                Foreground="{StaticResource AccentBrushLowFade}"
@@ -251,9 +258,9 @@
                                Margin="0,3,0,0"/>
                     <TextBlock Foreground="#FFF0F0F0"
                                TextWrapping="Wrap"
-                               FontWeight="SemiLight"
+                               FontWeight="Normal"
                                Grid.Column="1"
-                               Margin="4,0,0,0">
+                               Margin="8,0,0,0">
                         <Run Text="Build version"
                              FontSize="14"
                              x:Uid="AppBuildNumber"/><Run Text=":" FontSize="14"/>
